<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/trial_list_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/boss_course_item"
    android:padding="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">


        <LinearLayout
            android:id="@+id/trial_list_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_id"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/trial_list_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boss_trial"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/trial_list_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trial_list_layout_id"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/application_boss_name"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/trial_list_boss_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boss_trial"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/trial_list_layout_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trial_list_layout_name"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:text="@string/application_boss_introduction"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/trial_list_boss_introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boss_trial"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trial_list_layout_introduction"
            android:gravity="end">

            <TextView
                android:id="@+id/trial_list_trial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:gravity="center"
                android:text="@string/trial_check"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>