<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.InformationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/user_info_head_up"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:background="@drawable/user_info_up_style"
                android:paddingBottom="60dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true">

                    <com.xuhao.myapp.View.CircleImageView
                        android:id="@+id/user_info_head_img"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/button_main_course_head"
                        android:src="@mipmap/head" />

                    <Button
                        android:id="@+id/user_info_head_login"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/user_info_head_img"
                        android:text="@string/text_login"
                        android:textColor="@color/green"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/user_info_center_layout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/user_info_center_style"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_info_center_my_indent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_library_books_black_24dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/my_indent" />

                <TextView
                    android:id="@+id/user_info_center_my_boss"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_personal_video_black_24dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/my_boss" />

                <TextView
                    android:id="@+id/user_info_center_history_watch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_history_watch"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/history_watch" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_info_down_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_info_center_layout"
                android:background="@drawable/user_info_item_style"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/user_info_down_call_human_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_call_phone"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/call_human_service"
                    android:textSize="13sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="@color/gray" />


                <TextView
                    android:id="@+id/user_info_down_use_help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_help_black_24dp"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/use_help"
                    android:textSize="13sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/user_info_down_feed_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_feed_back"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/feed_back"
                    android:textSize="13sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/user_info_down_check_new_apk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_check_new_apk"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/check_new_apk"
                    android:textSize="13sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/user_info_down_about_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/about_us"
                    android:textSize="13sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/user_info_down_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_settings_black_24dp"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/setting"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_info_recommend_friend_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_info_down_layout"
                android:layout_marginTop="10dp"
                android:background="@drawable/user_info_item_style"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/recommend_friend" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/user_info_recommend_friend_weiXin_friend"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_weixin"
                        android:gravity="center"
                        android:text="@string/weixin_friend"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/user_info_recommend_friend_weiXin_circle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_friend_circle"
                        android:gravity="center"
                        android:text="@string/friend_circle"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/user_info_recommend_friend_qq_friend"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_qq"
                        android:gravity="center"
                        android:text="@string/qq_friend"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_info_recommend_friend_layout"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/endPrompt"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>